--- a/index-en.html
+++ b/index-en.html
@@ -16,7 +16,7 @@
 
   <!-- Header with centered logo and language button on right -->
   <header class="relative flex flex-col items-center p-6 md:flex-row md:justify-center">
-    <img src="img/logo.png" alt="Moshi Moshi Logo" class="w-48 md:w-60 mx-auto">
+    <img src="logo.png" alt="Moshi Moshi Logo" class="w-48 md:w-60 mx-auto">
     <a href="index.html" class="absolute top-6 right-6 bg-white text-red-800 px-4 py-1 rounded-full text-sm hover:bg-red-100 transition">Español</a>
   </header>
 
