--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="text-center mb-6 animate-fade-in">
     <a href="https://moshisando.myrestoo.net/es/reservar" target="_blank"
        class="inline-block bg-red-700 hover:bg-red-900 text-white text-xl font-bold py-4 px-10 rounded-full shadow-lg transition duration-300">
-      🍣 Reservar mesa
+       Reservar mesa
     </a>
   </section>
 
