--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Header con logo centrado y botón idioma derecha -->
   <header class="relative flex flex-col items-center p-6 md:flex-row md:justify-center">
     <img src="logo.png" alt="Logo Moshi Moshi" class="w-48 md:w-60 mx-auto">
-    <a href="index-en.html" class="absolute top-6 right-6 bg-white text-red-800 px-4 py-1 rounded-full text-sm hover:bg-red-100 transition">English</a>
+    <a href="index-en.html" class="absolute top-6 right-6 bg-white text-red-800 px-4 py-1 rounded-full text-sm hover:bg-red-100 transition"> 🇬🇧 English</a>
   </header>
 
   <!-- Sección de presentación -->
